feat: add references endpoints
